--- a/index.html
+++ b/index.html
@@ -19,4 +19,6 @@
 <body>
     <h1>Welcome to My Web Page</h1>
     <p>This is a simple web page created as an example.</p>
+    <h2>About Me</h2>
+    <p>I am a web developer with a passion for creating beautiful and functional websites.</p>
 </html>
